Fix jitpack (#16)
* Bump gradle wrapper

* Clean up cache key

* Fix non-nullable field

* Upgrade spock and groovy

* Use java 17

* Remove tool chain config (cannot be set together with source target compatibility

* Set java version for all projects

* Try toolchain in base

* Try toolchain in projects

* Revert build.gradle changes

* Avoid using java 17 method