@@ -2,6 +2,7 @@ package tech.allegro.schema.json2avro.converter;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.google.common.annotations.VisibleForTesting;
+import com.google.common.collect.ImmutableSet;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
@@ -12,7 +13,7 @@ import org.apache.avro.Schema.Type;
 public final class AdditionalPropertyField {
 
   public static final String DEFAULT_AVRO_FIELD_NAME = "_airbyte_additional_properties";
-  public static final Set<String> DEFAULT_JSON_FIELD_NAMES = Set.of("_ab_additional_properties", DEFAULT_AVRO_FIELD_NAME);
+  public static final Set<String> DEFAULT_JSON_FIELD_NAMES = ImmutableSet.of("_ab_additional_properties", DEFAULT_AVRO_FIELD_NAME);
   public static final Schema FIELD_SCHEMA = Schema.createUnion(
       Schema.create(Schema.Type.NULL),
       Schema.createMap(Schema.create(Type.STRING)));
